--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0"?>
 <odoo>
     <menuitem id="estate_menu_root" name="Real Estate">
-        <menuitem id="estate_first_level_menu" name="First Level">
-            <menuitem id="estate_property_menu_action" action="estate_property_action"/>
+        <menuitem id="estate_first_level_menu" name="Advertisments">
+            <menuitem id="estate_property_menu_action" action="estate_property_action" name="Properties"/>
+        </menuitem>
+
+        <menuitem id="estate_type_first_level_menu" name="Settings">
+            <menuitem id="estate_property_type_menu_action" action="estate_property_type_action" name="Property Types"/>
+            <menuitem id="estate_property_tag_menu_action" action="estate_property_tag_action" name="Property Tags"/>
         </menuitem>
     </menuitem>
 </odoo>
