--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -27,6 +27,18 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button 
+                        name="action_sold_property"
+                        type="object"
+                        string="SOLD"
+                    />
+                    <button 
+                        name="action_cancel_property"
+                        type="object"
+                        string="CANCEL"
+                    />
+                </header>
                 <sheet>
                     <group>
                         <h1>
@@ -36,6 +48,7 @@
                     </group>
                     <group>
                         <group>
+                            <field name="state"/>
                             <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
