--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -9,11 +9,11 @@
                 <field name="postcode"/>
                 <field name="expected_price"/>
                 <field name="bedrooms"/>
-                <field name="living_area"/>
+                <field name="living_area" filter_domain="[('living_area', '>=', self)]"/>
                 <field name="facades"/>
                 <field name="property_type_id"/>
-                <field name="tag_ids"/>
-                <filter name="Available" domain="[('state', 'in', ['new', 'offer_received'])]"/>
+                <field name="tag_ids" widget="many2many_tags" string="" options="{'color_field': 'color'}"/>
+                <filter name="available" string="Available" domain="[('state', 'in', ['new', 'offer_received'])]"/>
                 <filter name="Busy" domain="[('tag_ids', '=', 'busy')]"/>
                 <filter name="postcode" context="{'group_by':'postcode'}"/>
                 <filter name="postcode" context="{'group_by':'property_type_id'}"/>
@@ -32,24 +32,26 @@
                         name="action_sold_property"
                         type="object"
                         string="SOLD"
+                        invisible="state in ['sold', 'cancelled']"
                     />
                     <button 
                         name="action_cancel_property"
                         type="object"
                         string="CANCEL"
+                        invisible="state in ['sold', 'cancelled']"
                     />
+                    <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold"/>
                 </header>
                 <sheet>
                     <group>
                         <h1>
                             <field name="name" class="oe_inline"/>
                         </h1>
-                        <field name="tag_ids" widget="many2many_tags" string=""/>
+                        <field name="tag_ids" widget="many2many_tags" string="" options="{'color_field': 'color'}"/>
                     </group>
                     <group>
                         <group>
-                            <field name="state"/>
-                            <field name="property_type_id"/>
+                            <field name="property_type_id" options="{'no_create': true}"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
@@ -67,8 +69,8 @@
                                     <field name="facades"/>
                                     <field name="garage"/>
                                     <field name="garden"/>
-                                    <field name="garden_area"/>
-                                    <field name="garden_orientation"/>
+                                    <field name="garden_area" invisible="not garden"/>
+                                    <field name="garden_orientation" invisible="not garden"/>
                                     <field name="total_area"/>
                                 </group>
                             </page>
@@ -92,16 +94,18 @@
         <field name="name">estate.property.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree decoration-success="state == 'offer_received' or state == 'offer_accepted'"
+                  decoration-bf="state == 'offer_accepted'" decoration-muted="state == 'sold'">
                 <field name="name" string="Title"/>
-                <field name="tag_ids"/>
                 <field name="postcode"/>
+                <field name="property_type_id"/>
+                <field name="tag_ids" widget="many2many_tags" string="" options="{'color_field': 'color'}"/>
                 <field name="bedrooms"/>
                 <field name="living_area"/>
                 <field name="expected_price"/>
                 <field name="selling_price"/>
-                <field name="date_availability"/>
-                <field name="property_type_id"/>
+                <field name="date_availability" optional="hidden"/>
+                <field name="state" invisible='1'/>
             </tree>
         </field>
     </record>
@@ -110,5 +114,6 @@
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_available': True}</field>
     </record>
 </odoo>
