--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -22,15 +22,22 @@
         <field name="name">estate.property.offer.tree</field>
         <field name="model">estate.property.offer</field>
             <field name="arch" type="xml">
-                <tree>
+                <tree editable="top" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'">
                     <field name="price"/>
                     <field name="partner_id"/>
                     <field name="validity"/>
                     <field name="date_deadline"/>
-                    <button name="action_accept" string="" type="object" icon="fa-check"/>
-                    <button name="action_refuse" string="" type="object" icon="fa-close"/>
-                    <field name="status"/>
+                    <button name="action_accept" string="" type="object" icon="fa-check" invisible="status"/>
+                    <button name="action_refuse" string="" type="object" icon="fa-close" invisible="status"/>
+                    <field name="status" invisible='1'/>
                 </tree>
             </field>
+    </record>
+
+    <record id="estate_property_offer_action" model="ir.actions.act_window">
+        <field name="name">Offers</field>
+        <field name="res_model">estate.property.offer</field>
+        <field name="view_mode">tree</field>
+        <field name="domain">[('property_type_id', '=', active_id)]</field>
     </record>
 </odoo>
