--- a/estate/views/estate_property_menus.xml
+++ b/estate/views/estate_property_menus.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
-    <menuitem id="estate_menu_root" name="Real Estate">
-        <menuitem id="estate_first_level_menu" name="Advertisments">
+    <menuitem id="estate_property_menu_root" name="Real Estate">
+        <menuitem id="estate_property_first_level_menu" name="Advertisments">
             <menuitem id="estate_property_menu_action" action="estate_property_action" name="Properties"/>
         </menuitem>
 
